	(twittering-update-status): likewise.
	(twittering-organic-retweet): invoke `twittering-update-status'
	with a skeleton for generating an initial string.

	* twittering-mode.el: In default, the cursor is placed on the head
	when editing an organic retweet.
	(twittering-retweet-format): modify the initial value so that the
	cursor will be placed previous to the initial string.

2011-09-05  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix extraction of hashtags from a XML
	response.
	(twittering-normalize-raw-status): Fix extraction of hashtags from
	a XML response.

	* twittering-mode.el: The sign string feature is obsolete. The
	feature based on the function `twittering-sign-string-function'
	and the variable `twittering-sign-simple-string' is removed. The
	edit skeleton feature can be used as its alternative.
	(twittering-initialize-global-variables-if-necessary): display a
	warning about obsolete sign string feature. The function also
	translates the configuration of obsolete sign string into that of
	edit skeleton if possible.
	(twittering-sign-simple-string): removed.
	(twittering-sign-string-function): removed.
	(twittering-sign-string-default-function): removed.
	(twittering-sign-string): removed.
	(twittering-edit-length-check): do not use the obsolete function
	`twittering-sign-string'.
	(twittering-show-minibuffer-length): likewise.
	(twittering-update-status-from-minibuffer): likewise.

2011-09-04  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Remove stickiness of text properties.
	(twittering-make-string-with-user-name-property): add front-sticky
	and rear-nonsticky property to STR for removing stickiness.
	(twittering-make-string-with-source-property): likewise.
	(twittering-make-string-with-uri-property): likewise.
	(twittering-generate-format-table): add front-sticky and
	rear-nonsticky property to the string for "%r" in order to remove
	stickiness.
	(twittering-generate-formater-for-first-spec): add front-sticky